resume mobile spacing fix

--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,12 @@ html, body{
         margin-top: 20px;
     }
 
+    .resume-container {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
     .resume-container iframe {
         display: none;
     }
@@ -288,6 +294,7 @@ html, body{
         width: 90%;
         margin: 0;
         height: auto;
+        padding: 0;
     }
 }
 
@@ -320,6 +327,12 @@ html, body{
         max-width: 150px;
     }
 
+    .resume-container {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
     .resume-container iframe {
         display: none;
     }
@@ -329,5 +342,6 @@ html, body{
         width: 90%;
         margin: 0;
         height: auto;
+        padding: 0;
     }
 }
